[package]
name = "rown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
m3u8-rs = "5.0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = "3.8.1"
